# Glance

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
Docs/: glance_architecture.md  glance_design_document.md
Docs/Actions/: README.md
Docs/Actions/S1/: S1-PR1-project-scaffold.md  S1-PR10-schema-realignment.md  S1-PR11-exif-and-scanner-fixes.md  S1-PR12-scan-transaction-and-resume.md  S1-PR13-heic-and-raw-decoding.md  S1-PR14-timeline-ui-rework.md  S1-PR15-task-queue.md  S1-PR2-storage-schema.md  S1-PR3-scanner-identity-pairing.md  S1-PR4-metadata-extraction.md  S1-PR5-scan-orchestration-relocation.md  S1-PR6-thumbnail-asset-pipeline.md  S1-PR7-timeline-ui.md  S1-PR8-tauri-ipc-wiring.md  S1-PR9-thumbnail-integration-and-quality.md  S1-README.md  S1-REVIEW.md  STATUS.md
Docs/Usage/: README.md  developer-guide.md  getting-started.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/db/: dao.rs  mod.rs  schema.rs
src-tauri/src/core/db/migrations/: 001_initial_schema.sql
src-tauri/src/core/exif/: mod.rs
src-tauri/src/core/identity/: mod.rs
src-tauri/src/core/raw/: mod.rs
src-tauri/src/core/scanner/: mod.rs  orchestrator.rs
src-tauri/src/core/tasks/: mod.rs
src-tauri/src/core/thumbnail/: mod.rs
src/components/: ThumbnailGrid.tsx
src/ipc/: index.ts  library.ts  timeline.ts
src/state/: useLibraryStore.ts  useTimelineStore.ts
src/styles/: global.css
src/views/: LibrarySetup.tsx  Lightbox.tsx  Timeline.tsx
