[package]
name = "glance-app"
version = "0.1.0"
edition = "2024"

[lib]
name = "glance_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.35", features = ["bundled"] }
dirs = "6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
walkdir = "2"
kamadak-exif = "0.5"
quick-xml = "0.39"
chrono = "0.4"
image = "0.25"
fast_image_resize = "5"

[dev-dependencies]
tempfile = "3"
